# mtang-algo-trading

./: pyproject.toml  readme.md
notebooks/: support_and_resistance.ipynb
src/: main.py  strategies.py  ta.py  ta_utils.py  trading_analysis.py
src/backtest/: emaadx.py  rsi.py  strategies.py  support_resistance.py
src/backtest/strategies/: __init__.py  rsi.py  support_resistance.py  trend_EMAADX.py
src/metatrader/: __init__.py  mt5_connection.py  order.py
src/mtang-backtrade/: backtrade.py
tests/: test_order.py
