[project]
name = "algo-trading"
version = "0.0.1"
dependencies = [
    "pandas~=2.2.3",
    "numpy~=1.26.4",
    "matplotlib~=3.8.4",
    "requests~=2.32.3",
    "schedule~=1.2.2",
    "MetaTrader5",
    "backtrader~=1.9.78.123",
    "scipy~=1.15.2",
    "mplfinance~=0.12.10b0",
    "backtesting~=0.6.4",
    "TA-Lib~=0.6.3", # Install ta-lib binaries for this to work
    "python-dotenv~=1.1.0",
    "pytest~=8.3.5",
    "pytest-mock",
    "tqdm~=4.67.1"
]